[package]
name = "recursive-git"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Git with recursiveness. Useful for running one git command on many repositories."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/recursive-git"
documentation = "https://docs.rs/recursive-git/"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
